dodano licznik gps

--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
         <button onclick="toggleNightMode()">🌙 Tryb nocny</button>
     </header>
     <main>
+    <section id="distance-tracker" class="card">
+      <h2>📏 Dystans dzisiaj</h2>
+      <p><strong id="distance">0.00</strong> km</p>
+    </section>
+
         <section id="quote-section">
             <h2>Cytat dnia</h2>
             <p id="quote"></p>
